fix(Data mapping and legend configurations): Fixing overlapping of legend set or mapping between vis

--- a/src/app/dashboard/modules/ngx-dhis2-data-selection-filter/modules/data-mapping/components/data-mapping-groups/data-mapping-groups.component.css
+++ b/src/app/dashboard/modules/ngx-dhis2-data-selection-filter/modules/data-mapping/components/data-mapping-groups/data-mapping-groups.component.css
@@ -38,7 +38,7 @@
 }
 
 .data-filter-group__list {
-  max-height: 400px;
+  max-height: 200px;
   margin-top: 5px;
   overflow: auto;
   padding: 5px;
