--- a/src/app/dashboard/modules/ngx-dhis2-data-selection-filter/modules/legend-set-configuration/containers/legend-set-container/legend-set-container.component.css
+++ b/src/app/dashboard/modules/ngx-dhis2-data-selection-filter/modules/legend-set-configuration/containers/legend-set-container/legend-set-container.component.css
@@ -34,7 +34,7 @@
 }
 
 .legend-set-group_list {
-  max-height: 400px;
+  max-height: 300px;
   margin-top: 5px;
   overflow: auto;
   padding: 5px;
